# estrade

./: .flake8  .gitignore  .travis.yml  Dockerfile  LICENCE  MANIFEST.in  Makefile  README.md  README.template  docker-compose.yml  docker_usage.txt  mkdocs.yml  pyproject.toml  radon.cfg  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
docs/: Makefile  ROADMAP.md  candle.rst  candle_set.rst  changelog.md  conf.py  contributing.md  index.md  index.rst  indicators.rst  install.md  install.rst  provider.rst  quickstart.md  quickstart.rst  reference.rst  requirements.txt  strategy.rst  tick.rst  trade.rst  trade_manager.rst  tutorial.md
docs/guide/: epic.md  tick.md
docs/reference/: candle.md  candle_set.md  enums.md  epic.md  provider.md  strategy.md  tick.md  tick_provider.md  trade.md  trade_manager.md  trade_provider.md
docs/reference/graph/: base_indicators.md  frame_set.md
docs/reference/graph/indicators/: candle_set.md  pivot.md  rsi.md  simple_moving_average.md
docs/reference/indicators/candle_set/: exponential_moving_average.md  moving_average.md
docs/reference/reporting/: csv.md
estrade/: __init__.py  candle.py  candle_set.py  epic.py  event_manager.py  exceptions.py  market.py  market_mixin.py  observer.py  provider.py  ref_mixin.py  stop_limit.py  strategy.py  tick.py  tick_provider.py  trade.py  trade_manager.py  trade_provider.py
estrade/abstract/: Acandle_set_indicator.py  Aprovider.py  Areporting.py  Astop_limit.py  Atrade_class.py
estrade/classes/: candle.py  candle_set.py  epic.py  exceptions.py  market.py  observer.py  stop_limit.py  strategy.py  tick.py  trade.py  trade_manager.py
estrade/classes/abstract/: Amarket_class.py  Aprovider.py  Aref_class.py  Areporting.py  Astop_limit.py  Atrade_class.py  __init__.py
estrade/enums/: __init__.py
estrade/graph/: __init__.py  base_indicator.py  frame_set.py
estrade/graph/indicators/: candle_set.py  pivot.py  rsi.py  simple_moving_average.py
estrade/indicators/candle_set/: moving_average.py
estrade/mixins/: __init__.py  candle_set_indicator_mixin.py  meta.py  ref.py  ref_mixin.py  reporting_mixin.py  stop_limit_mixin.py  timed.py  timeframe.py  trade_class_mixin.py  transaction.py
estrade/reporting/: __init__.py  csv.py
estrade/utils/: csv.py  utils.py
samples/: run.py
samples/providers/: random.py
samples/providers/database/: db_provider.py
samples/providers/database/models/: __init__.py  tick.py
samples/strategies/: moving_avg_strategy.py  random.py  random_strategy.py
scripts/: docker  pre-commit.py
tests/: conftest.py  factories.py
tests/classes/: test_candle.py  test_candle_set.py  test_epic.py  test_market.py  test_provider.py  test_stop_limit.py  test_strategy.py  test_tick.py  test_trade.py  test_trade_manager.py
tests/classes/abstract/: test_Acandle_set_indicator.py  test_Aprovider.py
tests/doc/guide/epic/: test_handle_tick.py  test_holidays.py  test_nominal.py  test_open_close_time.py  test_tick_timezone_conversion.py  test_trade_days.py
tests/doc/guide/tick/: test_meta.py  test_nominal.py  test_spread.py  test_timezone.py  test_value.py
tests/doc/reference/epic/: test_init.py
tests/doc/reference/tick/: test_asdict.py  test_datetime.py  test_spread.py  test_str.py  test_value.py
tests/doc/reference/tick_provider/: test_get_epic_by_ref.py  test_init.py
tests/doc/reference/trade/: test_update.py
tests/doc/tutorial/: test_candle_set.py  test_epic.py  test_frame_set.py  test_simple_moving_average.py  test_strategy.py  test_tick.py  test_tick_provider.py  test_trade_provider_backtest.py  test_trade_provider_custom.py
tests/estrade/: test_candle.py  test_market.py  test_tick.py
tests/indicators/: test_moving_average.py
tests/integration/: test_indicators.py  test_reporting_csv.py  test_trade.py  test_trade_close.py  test_trade_open.py  test_trade_result.py
tests/unit/: test_epic.py  test_strategy.py  test_tick.py  test_tick_provider.py  test_trade.py  test_trade_close.py  test_trade_provider.py  test_trade_provider_backtest.py
tests/unit/factories/: __init__.py  epic.py  factory.py  strategy.py  tick.py  tick_provider.py  trade.py  trade_provider.py
tests/unit/factories/graph/: base_indicator.py  frame_set.py
tests/unit/factories/graph/indicators/: candle_set.py  pivot.py  rsi.py  simple_moving_average.py
tests/unit/graph/: test_base_indicator.py  test_base_indicator_value.py  test_frame.py  test_frame_set.py
tests/unit/mixins/: test_timeframe.py
(+12 files in other folders)
