[tool.poetry]
name = "Estrade"
version = "0.1.6"
description = "Build, Backtest and Go Live your own trading bots"
authors = ["Gabriel Oger"]
license = "GPL-3.0-or-later"
readme = "docs/index.md"

homepage = "https://pypi.org/project/estrade/"
documentation = "https://estrade.readthedocs.io/"
repository = "https://github.com/cimourdain/estrade"

keywords = [
    "trading",
    "trading-bot",
    "backtesting-trading-strategies",
    "backtesting",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial",
]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^0.15.5"
python-dateutil = "^2.8.1"
pytz = "^2019.3"
pyYAML = "^5.3"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
factory_boy = "^2.12.0"
flake8 = "^3.7.9"
freezegun = "^0.3.14"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pdbpp = "^0.10.2"
setuptools = "^45.1.0"
twine = "^3.1.1"
mkdocs = ">=1.1,<2"
mkdocs-material = ">=4.6.3,<5"
pygments = "==2.5.2"
mkdocstrings = ">=0.8,<1"
black = "^19.10b0"
mypy = "^0.761"

[tool.black]
line-length = 88
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

