[tool.poetry]
name = "Estrade"
version = "0.0.1"
description = "Build, Backtest and Go Live your own trading bots"
authors = ["Gabriel Oger"]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^0.15.5"
marshmallow = "^3.4.0"
python-dateutil = "^2.8.1"
pytz = "^2019.3"
pyYAML = "^5.3"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
factory_boy = "^2.12.0"
flake8 = "^3.7.9"
freezegun = "^0.3.14"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pdbpp = "^0.10.2"
setuptools = "^45.1.0"
sphinx = "^2.3.1"
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
