[tool.poetry]
name = "Estrade"
version = "0.2.0"
description = "Build, Backtest and Go Live your own trading bots"
authors = ["Gabriel Oger"]
license = "GPL-3.0-or-later"
readme = "README.md"

homepage = "https://pypi.org/project/estrade/"
documentation = "https://estrade.readthedocs.io/"
repository = "https://github.com/cimourdain/estrade"

keywords = [
    "trading",
    "trading-bot",
    "backtesting-trading-strategies",
    "backtesting",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial",
]
exclude = [
    "docs/*",
    "reports/*",
    "scripts/*",
    "tests/*",
]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^0.17"
python-dateutil = "^2.8.1"
pytz = "^2020.4"
objgraph = "^3.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-isort = "^3.0.1"

flake8-comprehensions = "^3.2.3"
flake8-docstrings = "^1.5.0"
isort = "^4.3.21"  # flake8-isort prevents update to 5.x
pytest = "^6"
pytest-cov = "^2.8.1"
pytest-mock = "^3"
freezegun = "^1"
pdbpp = "^0.10.2"
setuptools = "^45.1.0"
twine = "^3.1.1"
mkdocs = "^1.1.2"
mkdocs-material = "^6"
pygments = "^2.5.2"
mkdocstrings = "^0.13"
black = "^20.8b1"
mypy = "^0.790"
radon = "^4.2.0"
flake8_polyfill = "*"
xenon = "^0.7.0"
Jinja2 = "*"
click = "*"
pytest-clarity = "0.3.0a0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
combine_as_imports = true
case_sensitive = true
order_by_type = false
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"

